@@ -1,1 +1,1 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Pomelo - Downloads</title><link rel="icon" href="./favicon.png" type="image/png"><script src="https://kit.fontawesome.com/f566336324.js" crossorigin="anonymous"></script><link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&family=Merriweather:wght@400&display=swap" rel="stylesheet"><style>body{font-family:Roboto,sans-serif;background-color:#fbf6e2;margin:20px;padding:0}.container{display:flex;flex-direction:row;justify-content:space-between;padding:20px;max-width:900px;margin:0 auto}.left-content{flex:1;padding-right:20px}.right-content{display:flex;flex-direction:column;align-items:flex-end}h1{color:#333}p{color:#666}.button{display:inline-block;margin-bottom:20px;padding:10px 20px;font-size:16px;font-weight:700;color:#fff;background-color:#007bff;border:none;border-radius:20px;cursor:pointer;text-decoration:none}.button:hover{background-color:#0056b3}</style></head><body><a href="./" class="button"><i class="fa-solid fa-arrow-left"></i> Go Back to Home</a><div class="container"><div class="left-content"><h2>Installation will not be as simple as Sideloading with AltStore or SideStore - Please read the setup guide on the Gitlab repo.</h2></div><div class="right-content"><a href="https://gitlab.com/pomelo-emu/Pomelo" class="button">Installation Guide</a></div></div><div class="container"><div class="left-content"><h1>Pomelo Release - Version 2.2</h1><p>Release Date: October 14, 2024</p><h2>Changelog:</h2><ul><li>Add iOS 15 Support</li><li>Add URLScheme</li><li>Add Shortcuts</li><li>Fixed Mii Maker</li><li>Add 16/9 Full Screen</li><li>Add Saving Game Icons</li><li>(Re) Add Plus button for Importing roms, keys and firmware</li><li>New App Icons</li></ul></div><div class="right-content"><a href="https://github.com/Pomelo-Emu/pomelo-emu.github.io/releases/download/2.2/Pomelo.ipa" class="button"><i class="fa-solid fa-circle-down"></i> Download v2.2 .IPA</a></div></div><div class="container"><div class="left-content"><h1>Pomelo Release - Version 2.1</h1><p>Release Date: October 14, 2024</p><h2>Changelog:</h2><ul><li>Add Mii Maker.</li><li>Add in app Trollstore JIT Enabling</li><li>Make onscreen controls more translucent</li></ul></div><div class="right-content"><a href="https://github.com/Pomelo-Emu/pomelo-emu.github.io/releases/download/2.1/Pomelo-2.1.ipa" class="button"><i class="fa-solid fa-circle-down"></i> Download v2.1 .IPA</a></div></div></body><body><div class="container"><div class="left-content"><h1>Pomelo Release - Version 2.0</h1><p>Release Date: October 10, 2024</p><h2>Changelog:</h2><ul><li>Add Screenshots (may crash on some games)</li><li>Make Bottom Buttons Work</li><li>Add Screenshot Manager</li><li>Re Add BootOS</li><li>Add Games Grid</li><li>Adjust On-Screen Controls</li></ul></div><div class="right-content"><a href="https://github.com/Pomelo-Emu/pomelo-emu.github.io/releases/download/2.0/Pomelo-2.0.ipa" class="button"><i class="fa-solid fa-circle-down"></i> Download v2.0 .IPA</a></div></div></body></html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Pomelo - Downloads</title><link rel="icon" href="/favicon.png" type="image/png"><script src="https://kit.fontawesome.com/f566336324.js" crossorigin="anonymous"></script><link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&family=Merriweather:wght@400&display=swap" rel="stylesheet"><style>body{font-family:Roboto,sans-serif;background-color:#fbf6e2;margin:20px;padding:0}.container{display:flex;flex-direction:row;justify-content:space-between;padding:20px;max-width:900px;margin:0 auto}.left-content{flex:1;padding-right:20px}.right-content{display:flex;flex-direction:column;align-items:flex-end}h1{color:#333}p{color:#666}.button{display:inline-block;margin-bottom:20px;padding:10px 20px;font-size:16px;font-weight:700;color:#fff;background-color:#007bff;border:none;border-radius:20px;cursor:pointer;text-decoration:none;transition:transform .2s,background-color .2s}.button:hover{background-color:#006adb;transform:scale(1.05);transition:transform .2s,background-color .2s}.button,.left-content,.right-content,h1,p{text-shadow:2px 2px 4px rgba(0,0,0,.2)}</style></head><body><a href="./" class="button"><i class="fa-solid fa-arrow-left"></i> Go Back to Home</a><div class="container"><div class="left-content"><h2>Installation will not be as simple as Sideloading with AltStore or SideStore - Please read the setup guide on the Gitlab repo.</h2></div><div class="right-content"><a href="https://gitlab.com/pomelo-emu/Pomelo" class="button">Installation Guide</a></div></div><div class="container"><div class="left-content"><h1>Pomelo Release - Version 2.2</h1><p>Release Date: October 14, 2024</p><h2>Changelog:</h2><ul><li>Add iOS 15 Support</li><li>Add URLScheme</li><li>Add Shortcuts</li><li>Fixed Mii Maker</li><li>Add 16/9 Full Screen</li><li>Add Saving Game Icons</li><li>(Re) Add Plus button for Importing roms, keys and firmware</li><li>New App Icons</li></ul></div><div class="right-content"><a href="https://github.com/Pomelo-Emu/pomelo-emu.github.io/releases/download/2.2/Pomelo.ipa" class="button"><i class="fa-solid fa-circle-down"></i> Download v2.2 .IPA</a></div></div><div class="container"><div class="left-content"><h1>Pomelo Release - Version 2.1</h1><p>Release Date: October 14, 2024</p><h2>Changelog:</h2><ul><li>Add Mii Maker.</li><li>Add in app Trollstore JIT Enabling</li><li>Make onscreen controls more translucent</li></ul></div><div class="right-content"><a href="https://github.com/Pomelo-Emu/pomelo-emu.github.io/releases/download/2.1/Pomelo-2.1.ipa" class="button"><i class="fa-solid fa-circle-down"></i> Download v2.1 .IPA</a></div></div></body><body><div class="container"><div class="left-content"><h1>Pomelo Release - Version 2.0</h1><p>Release Date: October 10, 2024</p><h2>Changelog:</h2><ul><li>Add Screenshots (may crash on some games)</li><li>Make Bottom Buttons Work</li><li>Add Screenshot Manager</li><li>Re Add BootOS</li><li>Add Games Grid</li><li>Adjust On-Screen Controls</li></ul></div><div class="right-content"><a href="https://github.com/Pomelo-Emu/pomelo-emu.github.io/releases/download/2.0/Pomelo-2.0.ipa" class="button"><i class="fa-solid fa-circle-down"></i> Download v2.0 .IPA</a></div></div></body></html>
