@@ -3,8 +3,15 @@
 "iconURL":"https://github.com/Pomelo-Emu/Pomelo/raw/main/Pomelo/Assets.xcassets/AppIcon.appiconset/fun%201.png",
 "localizedDescription":"Pomelo is a Nintendo Switch Emulator that uses the MoltenVK implementation\nNOTE: You need JIT for this to run",
 "name":"Pomelo","screenshotURLs":["https://github.com/stossy11/Pomelo/raw/main/images/IMG_1807.png"],"size":2184796,"subtitle":"A Nintendo Switch Emulator",
-"tintColor":"34a853","version":"1.7.1","versionDate":"2024-09-15T14:07:00-07:00",
-"versionDescription":"Fix On Screen Controller Crashing the App(or not),\nFix Launch Game Button,\nSupport for iOS 16(trollstore)"}],
-"identifier":"com.pomelo.Pomelo","name":"Pomelo-Emu","news":[{"appID":"com.stossy11.Pomelo","caption":"Switch emu at its finest",
+"tintColor":"34a853","version":"2.2","versionDate":"2024-10-20T14:07:00-07:00",
+"versionDescription":"Add iOS 15 Support
+\nAdd URLScheme pomelo://game?id=
+\nAdd Shortcuts
+\nFixed Mii Maker
+\nAdd 16/9 Full Screen
+\nAdd Saving Game Icons
+\n(Re) Add Plus button for Importing roms, keys and firmware
+\nNew App Icons"}],
+"identifier":"com.pomelo.Pomelo","name":"Pomelo-Emu","news":[{"appID":"com.stossy11.Pomelo","caption":"Switch Emu neat its finest",
 "date":"2024-09-15","identifier":"pomelo-is-out","imageURL":"https://github.com/Pomelo-Emu/Pomelo/raw/main/Pomelo/Assets.xcassets/AppIcon.appiconset/fun%201.png",
 "notify":false,"tintColor":"34a853","title":"Pomelo now works with Trollstore!","url":"https://pomelo-emu.github.io"}],"userInfo":{}}
