@@ -1,1 +1,1 @@
-body{font-family:Roboto,sans-serif;text-align:center;background-color:#fbf6e2;margin:0;padding:0;color:#363636}.content{position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);background:rgba(0,0,0,.5);padding:20px;border-radius:10px}h1{color:#4169e1;margin:0}.hero-section{padding:50px 20px}.hero-content{max-width:800px;margin:auto}.button-group{display:flex;justify-content:center;gap:10px;flex-wrap:wrap}.button-group a{flex:1;max-width:200px;text-align:center}.about-section,.features-section{margin-top:15vh;padding:50px 20px}h2{margin-bottom:20px;color:#000}.feature-grid{display:flex;justify-content:center;gap:20px;flex-wrap:wrap;grid-template-columns:repeat(auto-fill,minmax(250px,1fr))}.feature-item{background-color:rgba(245,232,181,.6);border-radius:15px;padding:20px;margin:15px 0;box-shadow:0 4px 6px rgba(0,0,0,.3)}.button-85{display:inline-block;padding:10px 20px;margin:5px;border-radius:25px;text-decoration:none;font-size:1em;color:#fff;transition:background-color .3s ease}.button:hover{opacity:.8}.usualbutton{display:inline-block;padding:10px 20px;margin:5px;border-radius:25px;text-decoration:none;font-size:1em;color:#fff;background:#4169e1;transition:background-color .3s ease}.redbutton{display:inline-block;padding:10px 20px;margin:5px;border-radius:25px;text-decoration:none;font-size:1em;color:#fff;background:#de0a26;transition:background-color .3s ease}.purple{display:inline-block;padding:10px 20px;margin:5px;border-radius:25px;text-decoration:none;font-size:1em;color:#fff;background:#7289da;transition:background-color .3s ease}
+body{font-family:Roboto,sans-serif;text-align:center;background-color:#fbf6e2;margin:0;padding:0;color:rgba(37,37,37,.925)}.content{position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);background:rgba(0,0,0,.5);padding:20px;border-radius:10px}h1{color:#4169e1;margin:0}.hero-section{padding:50px 20px}.hero-content{max-width:800px;margin:auto}.button-group{display:flex;justify-content:center;gap:10px;flex-wrap:wrap}.button-group a{flex:1;max-width:200px;text-align:center}.about-section,.features-section{margin-top:15vh;padding:50px 20px}h2{margin-bottom:20px;color:#000}.feature-grid{display:flex;justify-content:center;gap:20px;flex-wrap:wrap;grid-template-columns:repeat(auto-fill,minmax(250px,1fr))}.feature-item{background-color:rgba(245,232,181,.6);border-radius:15px;padding:20px;margin:15px 0;box-shadow:0 4px 6px rgba(0,0,0,.3)}.button-85{display:inline-block;padding:10px 20px;margin:5px;border-radius:25px;text-decoration:none;font-size:1em;color:#fff;transition:background-color .3s ease}.button:hover{opacity:.8}.usualbutton{display:inline-block;padding:10px 20px;margin:5px;border-radius:25px;text-decoration:none;font-size:1em;color:#fff;background:#4169e1;transition:background-color .3s ease}.redbutton{display:inline-block;padding:10px 20px;margin:5px;border-radius:25px;text-decoration:none;font-size:1em;color:#fff;background:#de0a26;transition:background-color .3s ease}.purple{display:inline-block;padding:10px 20px;margin:5px;border-radius:25px;text-decoration:none;font-size:1em;color:#fff;background:#7289da;transition:background-color .3s ease}.feature-item:hover,.purple:hover,.redbutton:hover,.usualbutton:hover{transform:scale(1.05);transition:transform .2s}.feature-item,.purple,.redbutton,.usualbutton{transition:transform .2s}.button-group a,a,h1,h2,h3,p{text-shadow:2px 2px 4px rgba(0,0,0,.3)}
