@@ -1,1 +1,1 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Pomelo - Titles</title><link rel="icon" href="./favicon.png" type="image/png"><script src="https://kit.fontawesome.com/f566336324.js" crossorigin="anonymous"></script><link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&family=Merriweather:wght@400&display=swap" rel="stylesheet"><style>body{font-family:Roboto,sans-serif;background-color:#fbf6e2;color:#333;margin:20px}h2{color:#2d2d2d}h3{color:#555}ul{list-style-type:none;padding:0}li{background:#f5e8b5;margin:5px 0;padding:10px;border-radius:5px}.note{font-style:italic;color:#888}.back-button{display:inline-block;margin-bottom:20px;padding:10px 20px;font-size:16px;font-weight:700;color:#fff;background-color:#007bff;border:none;border-radius:20px;cursor:pointer;text-decoration:none}.back-button:hover{background-color:#0056b3}</style></head><body><a href="./" class="back-button"><i class="fa-solid fa-arrow-left"></i> Go Back to Home</a><h2>Game Titles Compatibility List</h2><h3 style="color:#82649a"><i class="fa-solid fa-bolt"></i> [8GB DEVICES ONLY]</h3><ul><li>Super Mario Bros. Wonder</li><li>Snipperclips Plus</li><li>Little Kitty Big City</li><li>Super Mario Maker 2 (Barely works on iPhone 15 Pro)</li><li>Mario & Sonic at the Olympic Games Tokyo 2020</li><li>Mario Tennis Aces</li><li>Sega Mega Drive Classics</li><li>Crash Bandicoot N. Sane Trilogy</li><li>Super Mario RPG</li><li>Super Smash Bros. Ultimate</li><li>Super Mario Odyssey</li><li>Minecraft (Bedrock Edition)</li><li>Mario Kart 8 Deluxe (1.8+ and Technically Playable)</li><li>Lego City Undercover</li><li>Red Dead Redemption</li><li>Skyrim</li><li>Batman: Arkham City</li><li>Call of Juarez Gunslinger</li><li>Cuphead</li></ul><h3 style="color:#649a67"><i class="fa-solid fa-tree"></i> [6GB+ DEVICES] - Works on above devices ^</h3><ul><li>Celeste</li><li>Toby: The Secret Mine (works on 3GB/4GB but too laggy)</li><li>Super Mario 3D World + Bowser's Fury</li><li>Portal Pizza Tower (Unofficial)</li><li>Ultra Street Fighter 2</li><li>Bug Fables</li><li>Sonic Superstars</li><li>TEVI</li><li>Omori</li><li>Eastward</li><li>The Centennial Case</li><li>Trinity Trigger</li><li>Tactics Ogre: Reborn</li><li>Persona 5 (Hair floats behind Characters)</li><li>Ninja Gaiden 123</li><li>PARANORMASIGHT</li><li>The Seven Mysteries of Honjo</li><li>Moonglow Bay</li><li>Crash Bandicoot N Sane Trilogy</li><li>Rising Lords</li><li>Cult of the Lamb</li><li>LOST EPIC</li><li>SCHIM</li><li>Fate Stay Night Remastered</li><li>HAAK</li><li>Hidden Through Time 2</li><li>Sea of Stars</li><li>Donkey Kong Country: Tropical Freeze</li><li>Paw Patrol: Adventure City Calls (Laggy)</li><li>Asterix & Obelix The Crystal Menhir</li><li>Oceanhorn: Monster of the Uncharted Seas</li><li>Super Mario Bros U Deluxe</li><li>Untitled Goose Game</li><li>Pokémon: Let's Go, Pikachu! / Pokémon: Let's Go, Eevee!</li></ul><h3 style="color:#649a67"><i class="fa-solid fa-seedling"></i> [4GB+ DEVICES] - Works on above devices ^</h3><ul><li>Helltaker</li><li>Minecraft: Nintendo Switch Edition (Legacy 4J)</li><li>Cat Quest</li><li>Captain Toad Treasure Tracker</li><li>Undertale</li><li>Mini Metro</li><li>Nintendo Switch Online (Gameboy, NES etc.)</li><li>Puyo Puyo Tetris</li><li>BOXBOY! + BOXGIRL!</li><li>There Is No Game: Wrong Dimension</li><li>Muse Dash</li><li>Cluster Truck (very bad performance)</li><li>Gorogoa</li><li>Guns, Gore and Cannoli</li><li>Mega Man Legacy Collection</li><li>Mom Hid My Game!</li><li>Hue</li></ul><h3 style="color:#649a67"><i class="fa-solid fa-leaf"></i> [3GB+ DEVICES] - Works on above devices ^</h3><ul><li>Home Menu/Mii Maker (Requires 17.0.0 or below firmware)</li><li>Homebrew App Store (Not all apps are compatible) <a href="https://github.com/fortheusers/hb-appstore/releases">https://github.com/fortheusers/hb-appstore/releases</a></li><li>Pikuniku (sometimes)</li><li>Super Meat Boy</li><li>World of Goo</li><li>Toby: The Secret Mine (performs very bad)</li><li>Little Inferno</li><li>Please, Don't Touch Anything: Classic</li><li>Baba Is You</li><li>The Binding of Isaac: Rebirth</li><li>The Binding of Isaac: Afterbirth+ (Enable "Set Onscreen Controls To Handheld")</li><li>Froggie</li><li>Cattie</li><li>Moonleap</li><li>Super Life Of Pixel</li><li>Sonic Mania</li><li>Wild West Crops</li></ul><h3 style="color:#64a9b9"><i class="fa-solid fa-star"></i> [Vision Pro] (The Tested ones anyway)</h3><ul><li>Sonic Mania</li><li>Captain Toad Treasure Tracker</li><li>Home Menu</li><li>Mario Kart 8 Deluxe</li><li>Super Mario 3D World + Bowsers Fury</li></ul><h3 style="color:#c5b453"><i class="fa-solid fa-wrench"></i> Requires a Save File in order to be played</h3><ul><li>Pokémon: Let's Go, Pikachu! and Pokémon: Let's Go, Eevee! (6GB+ Devices, Requires a save file for skipping the TV animation)</li></ul><h3 style="color:#b46e3c"><i class="fa-solid fa-bomb"></i> Playable but crashes at a certain point</h3><ul><li>Super Mario 3D All-Stars</li><li>Portal 2</li></ul><h3 style="color:#a14c4c"><i class="fa-solid fa-explosion"></i> Currently unplayable</h3><ul><li>Burnout Paradise</li><li>Farming Simulator 23</li><li>Super Mario RPG</li><li>Mario Party</li><li>Mario Party Superstars</li><li>Kirby and the Forgotten Land</li><li>Luigi's Mansion 3</li><li>No Man's Sky</li><li>Mario + Rabbids</li><li>Luigi's Mansion 2 HD</li><li>Asphalt 9 Legends</li><li>Witcher 3</li><li>Need For Speed Hot Pursuit</li><li>Mario Strikers Battle League</li><li>Animal Crossing</li><li>Kirby's Return to Dreamland</li><li>Paper Mario: The Origami King</li><li>Lego 2K Drive</li><li>OMNO</li><li>Princess Peach Showtime</li><li>The Legend Of Zelda: Link's Awakening</li><li>PJ Masks: Heroes of the Night</li><li>Little Nightmares</li><li>GRID Autosport</li><li>Splatoon 3</li><li>Sonic Forces</li><li>Knockout City</li><li>Mario + Rabbids: Sparks of Hope</li><li>Oceanhorn 2: Knights of the Lost Realm</li><li>Mario Golf: Super Rush</li><li>Pokemon Legends: Arceus</li><li>Splatoon 2</li><li>WRC 10</li><li>Hogwarts Legacy</li><li>Nintendo Switch Sports</li><li>Team Sonic Racing</li><li>Tears of the Kingdom</li><li>Breath of the Wild</li><li>Yoshi's Crafted World</li><li>Mario Party Jamboree</li><li>Resident Evil 5 (crashes at some point in-game)</li><li>Payday 2</li><li>Lego Star Wars: The Skywalker Saga</li><li>Doom Eternal</li><li>Dying Light</li><li>Portal 2</li></ul></body></html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Pomelo - Titles</title><link rel="icon" href="/favicon.png" type="image/png"><script src="https://kit.fontawesome.com/f566336324.js" crossorigin="anonymous"></script><link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&family=Merriweather:wght@400&display=swap" rel="stylesheet"><style>body{font-family:Roboto,sans-serif;background-color:#fbf6e2;color:#333;margin:20px}h2{color:#2d2d2d}h3{color:#555}ul{list-style-type:none;padding:0}li{background:#f5e8b5;margin:5px 0;padding:10px;border-radius:5px}.note{font-style:italic;color:#888}.back-button{display:inline-block;margin-bottom:20px;padding:10px 20px;font-size:16px;font-weight:700;color:#fff;background-color:#007bff;border:none;border-radius:20px;cursor:pointer;text-decoration:none;transition:transform .2s,background-color .2s}.back-button:hover{background-color:#006adb;transform:scale(1.05);transition:transform .2s,background-color .2s}.back-button,h2,h3,li{text-shadow:2px 2px 4px rgba(0,0,0,.2)}</style></head><body><a href="./" class="back-button"><i class="fa-solid fa-arrow-left"></i> Go Back to Home</a><h2>Game Titles Compatibility List</h2><h3 style="color:#82649a"><i class="fa-solid fa-bolt"></i> [8GB DEVICES ONLY]</h3><ul><li>Super Mario Bros. Wonder</li><li>Snipperclips Plus</li><li>Little Kitty Big City</li><li>Super Mario Maker 2 (Barely works on iPhone 15 Pro)</li><li>Mario & Sonic at the Olympic Games Tokyo 2020</li><li>Mario Tennis Aces</li><li>Sega Mega Drive Classics</li><li>Crash Bandicoot N. Sane Trilogy</li><li>Super Mario RPG</li><li>Super Smash Bros. Ultimate</li><li>Super Mario Odyssey</li><li>Minecraft (Bedrock Edition)</li><li>Mario Kart 8 Deluxe (1.8+ and Technically Playable)</li><li>Lego City Undercover</li><li>Red Dead Redemption</li><li>Skyrim</li><li>Batman: Arkham City</li><li>Call of Juarez Gunslinger</li><li>Cuphead</li></ul><h3 style="color:#649a67"><i class="fa-solid fa-tree"></i> [6GB+ DEVICES] - Works on above devices ^</h3><ul><li>Celeste</li><li>Toby: The Secret Mine (works on 3GB/4GB but too laggy)</li><li>Super Mario 3D World + Bowser's Fury</li><li>Portal Pizza Tower (Unofficial)</li><li>Ultra Street Fighter 2</li><li>Bug Fables</li><li>Sonic Superstars</li><li>TEVI</li><li>Omori</li><li>Eastward</li><li>The Centennial Case</li><li>Trinity Trigger</li><li>Tactics Ogre: Reborn</li><li>Persona 5 (Hair floats behind Characters)</li><li>Ninja Gaiden 123</li><li>PARANORMASIGHT</li><li>The Seven Mysteries of Honjo</li><li>Moonglow Bay</li><li>Crash Bandicoot N Sane Trilogy</li><li>Rising Lords</li><li>Cult of the Lamb</li><li>LOST EPIC</li><li>SCHIM</li><li>Fate Stay Night Remastered</li><li>HAAK</li><li>Hidden Through Time 2</li><li>Sea of Stars</li><li>Donkey Kong Country: Tropical Freeze</li><li>Paw Patrol: Adventure City Calls (Laggy)</li><li>Asterix & Obelix The Crystal Menhir</li><li>Oceanhorn: Monster of the Uncharted Seas</li><li>Super Mario Bros U Deluxe</li><li>Untitled Goose Game</li><li>Pokémon: Let's Go, Pikachu! / Pokémon: Let's Go, Eevee!</li></ul><h3 style="color:#649a67"><i class="fa-solid fa-seedling"></i> [4GB+ DEVICES] - Works on above devices ^</h3><ul><li>Helltaker</li><li>Minecraft: Nintendo Switch Edition (Legacy 4J)</li><li>Cat Quest</li><li>Captain Toad Treasure Tracker</li><li>Undertale</li><li>Mini Metro</li><li>Nintendo Switch Online (Gameboy, NES etc.)</li><li>Puyo Puyo Tetris</li><li>BOXBOY! + BOXGIRL!</li><li>There Is No Game: Wrong Dimension</li><li>Muse Dash</li><li>Cluster Truck (very bad performance)</li><li>Gorogoa</li><li>Guns, Gore and Cannoli</li><li>Mega Man Legacy Collection</li><li>Mom Hid My Game!</li><li>Hue</li></ul><h3 style="color:#649a67"><i class="fa-solid fa-leaf"></i> [3GB+ DEVICES] - Works on above devices ^</h3><ul><li>Home Menu/Mii Maker (Requires 17.0.0 or below firmware)</li><li>Homebrew App Store (Not all apps are compatible) <a href="https://github.com/fortheusers/hb-appstore/releases">https://github.com/fortheusers/hb-appstore/releases</a></li><li>Pikuniku (sometimes)</li><li>Super Meat Boy</li><li>World of Goo</li><li>Toby: The Secret Mine (performs very bad)</li><li>Little Inferno</li><li>Please, Don't Touch Anything: Classic</li><li>Baba Is You</li><li>The Binding of Isaac: Rebirth</li><li>The Binding of Isaac: Afterbirth+ (Enable "Set Onscreen Controls To Handheld")</li><li>Froggie</li><li>Cattie</li><li>Moonleap</li><li>Super Life Of Pixel</li><li>Sonic Mania</li><li>Wild West Crops</li></ul><h3 style="color:#64a9b9"><i class="fa-solid fa-star"></i> [Vision Pro] (The Tested ones anyway)</h3><ul><li>Sonic Mania</li><li>Captain Toad Treasure Tracker</li><li>Home Menu</li><li>Mario Kart 8 Deluxe</li><li>Super Mario 3D World + Bowsers Fury</li></ul><h3 style="color:#c5b453"><i class="fa-solid fa-wrench"></i> Requires a Save File in order to be played</h3><ul><li>Pokémon: Let's Go, Pikachu! and Pokémon: Let's Go, Eevee! (6GB+ Devices, Requires a save file for skipping the TV animation)</li></ul><h3 style="color:#b46e3c"><i class="fa-solid fa-bomb"></i> Playable but crashes at a certain point</h3><ul><li>Super Mario 3D All-Stars</li><li>Portal 2</li></ul><h3 style="color:#a14c4c"><i class="fa-solid fa-explosion"></i> Currently unplayable</h3><ul><li>Burnout Paradise</li><li>Farming Simulator 23</li><li>Super Mario RPG</li><li>Mario Party</li><li>Mario Party Superstars</li><li>Kirby and the Forgotten Land</li><li>Luigi's Mansion 3</li><li>No Man's Sky</li><li>Mario + Rabbids</li><li>Luigi's Mansion 2 HD</li><li>Asphalt 9 Legends</li><li>Witcher 3</li><li>Need For Speed Hot Pursuit</li><li>Mario Strikers Battle League</li><li>Animal Crossing</li><li>Kirby's Return to Dreamland</li><li>Paper Mario: The Origami King</li><li>Lego 2K Drive</li><li>OMNO</li><li>Princess Peach Showtime</li><li>The Legend Of Zelda: Link's Awakening</li><li>PJ Masks: Heroes of the Night</li><li>Little Nightmares</li><li>GRID Autosport</li><li>Splatoon 3</li><li>Sonic Forces</li><li>Knockout City</li><li>Mario + Rabbids: Sparks of Hope</li><li>Oceanhorn 2: Knights of the Lost Realm</li><li>Mario Golf: Super Rush</li><li>Pokemon Legends: Arceus</li><li>Splatoon 2</li><li>WRC 10</li><li>Hogwarts Legacy</li><li>Nintendo Switch Sports</li><li>Team Sonic Racing</li><li>Tears of the Kingdom</li><li>Breath of the Wild</li><li>Yoshi's Crafted World</li><li>Mario Party Jamboree</li><li>Resident Evil 5 (crashes at some point in-game)</li><li>Payday 2</li><li>Lego Star Wars: The Skywalker Saga</li><li>Doom Eternal</li><li>Dying Light</li><li>Portal 2</li></ul></body></html>
